apps/cortex-school/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
  name: cortex-school
  labels:
    name: cortex-school
    managed-by: argocd
